[gd_scene load_steps=10 format=2]

[ext_resource path="res://Reusable Scenes/Car.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/levelGraph.gd" type="Script" id=2]
[ext_resource path="res://Reusable Scenes/City.tscn" type="PackedScene" id=3]
[ext_resource path="res://Reusable Scenes/pauseButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Reusable Scenes/Pausemenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/font_theme.tres" type="Theme" id=6]
[ext_resource path="res://Images/road.png" type="Texture" id=7]
[ext_resource path="res://Images/grassbg.png" type="Texture" id=8]
[ext_resource path="res://Images/Flag.png" type="Texture" id=9]

[node name="levelGraph" type="Node2D"]
script = ExtResource( 2 )
MAX_FUEL = 250
destinationcity = 1

[node name="Background" type="TextureRect" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="FuelLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 130.0
margin_bottom = 39.0
theme = ExtResource( 6 )

[node name="Road2" type="TextureRect" parent="."]
margin_left = 642.833
margin_top = 74.2547
margin_right = 866.833
margin_bottom = 369.255
rect_rotation = 90.2437
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road6" type="TextureRect" parent="."]
margin_left = 265.833
margin_top = 109.255
margin_right = 489.833
margin_bottom = 404.255
rect_rotation = 46.3054
rect_scale = Vector2( 0.857963, 1.0119 )
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road8" type="TextureRect" parent="."]
margin_left = 646.833
margin_top = 447.255
margin_right = 870.833
margin_bottom = 742.255
rect_rotation = 90.2437
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road3" type="TextureRect" parent="."]
margin_left = 942.833
margin_top = 74.2547
margin_right = 1166.83
margin_bottom = 335.255
rect_rotation = 90.2437
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road11" type="TextureRect" parent="."]
margin_left = 542.833
margin_top = 186.255
margin_right = 766.833
margin_bottom = 535.255
rect_rotation = -0.199975
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road12" type="TextureRect" parent="."]
margin_left = 862.833
margin_top = 202.255
margin_right = 1086.83
margin_bottom = 551.255
rect_rotation = -0.199975
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road14" type="TextureRect" parent="."]
margin_left = 598.833
margin_top = 274.255
margin_right = 822.833
margin_bottom = 719.255
rect_rotation = -39.5653
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road13" type="TextureRect" parent="."]
margin_left = 238.833
margin_top = 210.255
margin_right = 462.833
margin_bottom = 559.255
rect_rotation = -0.199975
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road7" type="TextureRect" parent="."]
margin_left = 950.833
margin_top = 450.255
margin_right = 1174.83
margin_bottom = 721.255
rect_rotation = 90.2437
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road4" type="TextureRect" parent="."]
margin_left = 1269.83
margin_top = 267.255
margin_right = 1493.83
margin_bottom = 517.255
rect_rotation = 127.662
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road9" type="TextureRect" parent="."]
margin_left = 406.833
margin_top = 450.255
margin_right = 630.833
margin_bottom = 700.255
rect_rotation = 129.927
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road5" type="TextureRect" parent="."]
margin_left = 1076.83
margin_top = 628.255
margin_right = 1300.83
margin_bottom = 908.255
rect_rotation = 225.638
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="Road10" type="TextureRect" parent="."]
margin_left = 434.833
margin_top = 634.255
margin_right = 658.833
margin_bottom = 970.255
rect_rotation = 235.218
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 1

[node name="City0" parent="." instance=ExtResource( 3 )]
position = Vector2( 132.833, 364.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City1" parent="." instance=ExtResource( 3 )]
position = Vector2( 342.833, 186.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City2" parent="." instance=ExtResource( 3 )]
position = Vector2( 662.833, 178.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City3" parent="." instance=ExtResource( 3 )]
position = Vector2( 974.833, 178.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1207.83, 341.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City5" parent="." instance=ExtResource( 3 )]
position = Vector2( 982.833, 554.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City6" parent="." instance=ExtResource( 3 )]
position = Vector2( 662.833, 554.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City7" parent="." instance=ExtResource( 3 )]
position = Vector2( 342.833, 546.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="City8" parent="." instance=ExtResource( 3 )]
position = Vector2( 662.833, 354.255 )
scale = Vector2( 0.2, 0.2 )
input_pickable = true
__meta__ = {
"_edit_group_": true
}

[node name="Car" parent="." instance=ExtResource( 1 )]
position = Vector2( 132.833, 370.255 )
rotation = -3.13378
scale = Vector2( 0.03, 0.03 )

[node name="ImmovableObjects" type="CanvasLayer" parent="."]
layer = 100

[node name="pauseButton" parent="ImmovableObjects" instance=ExtResource( 4 )]

[node name="Warning" type="CanvasLayer" parent="."]
layer = 128

[node name="fueloverWarn" type="WindowDialog" parent="Warning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -108.0
margin_right = 176.0
margin_bottom = 108.0
theme = ExtResource( 6 )
popup_exclusive = true
window_title = "WARNING"

[node name="Label" type="Label" parent="Warning/fueloverWarn"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_right = 150.0
margin_bottom = 20.0
text = "INSUFFICIENT FUEL TO CONTINUE!"

[node name="replayBtn" type="Button" parent="Warning/fueloverWarn"]
margin_left = 136.0
margin_top = 136.0
margin_right = 216.0
margin_bottom = 156.0
text = "REPLAY"

[node name="Pausemenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="FlagStart" type="TextureRect" parent="."]
margin_left = 65.8327
margin_top = 254.255
margin_right = 1265.83
margin_bottom = 1502.25
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="FlagEnd" type="TextureRect" parent="."]
margin_left = 1142.83
margin_top = 231.255
margin_right = 2342.83
margin_bottom = 1479.25
rect_scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="LevelComplete" type="CanvasLayer" parent="."]
layer = 127

[node name="WindowDialog" type="WindowDialog" parent="LevelComplete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -208.5
margin_top = -142.0
margin_right = 208.5
margin_bottom = 142.0
theme = ExtResource( 6 )
popup_exclusive = true
window_title = "LEVEL COMPLETE"

[node name="Button" type="Button" parent="LevelComplete/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = 64.0
margin_right = 151.5
margin_bottom = 105.0
theme = ExtResource( 6 )
text = "GO TO NEXT LEVEL"

[node name="Label" type="Label" parent="LevelComplete/WindowDialog"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -107.0
margin_right = 107.0
margin_bottom = 119.0
theme = ExtResource( 6 )
text = "GREAT JOB! NOW TRY TO DO THE SAME, BUT WITH A DIFFERENT START AND FINISH CTIES.	 
"
autowrap = true

[connection signal="input_event" from="City0" to="." method="_on_City0_input_event"]
[connection signal="input_event" from="City1" to="." method="_on_City1_input_event"]
[connection signal="input_event" from="City2" to="." method="_on_City2_input_event"]
[connection signal="input_event" from="City3" to="." method="_on_City3_input_event"]
[connection signal="input_event" from="City4" to="." method="_on_City4_input_event"]
[connection signal="input_event" from="City5" to="." method="_on_City5_input_event"]
[connection signal="input_event" from="City6" to="." method="_on_City6_input_event"]
[connection signal="input_event" from="City7" to="." method="_on_City7_input_event"]
[connection signal="input_event" from="City8" to="." method="_on_City8_input_event"]
[connection signal="button_up" from="ImmovableObjects/pauseButton" to="." method="_on_pauseButton_button_up"]
[connection signal="button_up" from="Warning/fueloverWarn/replayBtn" to="." method="_on_replayBtn_button_up"]
[connection signal="button_up" from="Pausemenu/resume" to="." method="_on_resume_button_up"]

[editable path="Pausemenu"]
